--- a/rhb registration/Controllers/Registration Personal Info/PersonalnfoViewController.xib
+++ b/rhb registration/Controllers/Registration Personal Info/PersonalnfoViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -58,13 +58,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a-1-splashScreen-top-banner" translatesAutoresizingMaskIntoConstraints="NO" id="dTW-Vj-Lgg">
-                    <rect key="frame" x="0.0" y="20" width="375" height="5"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="7"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="5" id="yQ3-KJ-aEh"/>
+                        <constraint firstAttribute="height" constant="7" id="yQ3-KJ-aEh"/>
                     </constraints>
                 </imageView>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4TG-nd-KQg">
-                    <rect key="frame" x="0.0" y="25" width="375" height="2301"/>
+                    <rect key="frame" x="0.0" y="27" width="375" height="2299"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eHW-Cv-LUd">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="3926"/>
@@ -105,6 +105,21 @@
                                         <constraint firstAttribute="bottom" secondItem="qUm-ld-RB3" secondAttribute="bottom" id="iwq-XT-7zh"/>
                                     </constraints>
                                 </stackView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1TQ-hR-gn1" customClass="RHBProgressSegmentView" customModule="rhb_registration" customModuleProvider="target">
+                                    <rect key="frame" x="16" y="8" width="343" height="40"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="40" id="KQz-FG-hee"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="numberOfMilestone">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="activeMilestoneIndex">
+                                            <integer key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data Pribadi" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUb-yA-prN">
                                     <rect key="frame" x="16" y="46" width="343" height="18"/>
                                     <constraints>
@@ -1451,9 +1466,12 @@
                                 <constraint firstAttribute="trailing" secondItem="xru-ii-i9W" secondAttribute="trailing" constant="8" id="6tY-bk-QYE"/>
                                 <constraint firstAttribute="trailing" secondItem="jKW-U5-Gnr" secondAttribute="trailing" constant="8" id="7P9-fh-NsZ"/>
                                 <constraint firstAttribute="trailing" secondItem="vUb-yA-prN" secondAttribute="trailing" constant="16" id="8tQ-oR-TFV"/>
+                                <constraint firstItem="1TQ-hR-gn1" firstAttribute="top" secondItem="eHW-Cv-LUd" secondAttribute="top" constant="8" id="ApU-H6-akU"/>
                                 <constraint firstItem="Nqu-Lo-B2q" firstAttribute="top" secondItem="eHW-Cv-LUd" secondAttribute="top" constant="8" id="CNL-Y8-ak5"/>
                                 <constraint firstItem="xru-ii-i9W" firstAttribute="leading" secondItem="eHW-Cv-LUd" secondAttribute="leading" constant="8" id="DZc-G8-g09"/>
+                                <constraint firstItem="1TQ-hR-gn1" firstAttribute="centerX" secondItem="eHW-Cv-LUd" secondAttribute="centerX" id="HB2-ZI-NTz"/>
                                 <constraint firstItem="jKW-U5-Gnr" firstAttribute="leading" secondItem="eHW-Cv-LUd" secondAttribute="leading" constant="8" id="JUP-XX-mV5"/>
+                                <constraint firstItem="1TQ-hR-gn1" firstAttribute="leading" secondItem="eHW-Cv-LUd" secondAttribute="leading" constant="16" id="Jze-Aq-taD"/>
                                 <constraint firstItem="Nqu-Lo-B2q" firstAttribute="leading" secondItem="eHW-Cv-LUd" secondAttribute="leading" constant="16" id="Kk8-Qd-qBl"/>
                                 <constraint firstItem="xwM-Fn-mCo" firstAttribute="leading" secondItem="eHW-Cv-LUd" secondAttribute="leading" constant="8" id="Ne1-nS-pV8"/>
                                 <constraint firstItem="vUb-yA-prN" firstAttribute="top" secondItem="Nqu-Lo-B2q" secondAttribute="bottom" constant="8" id="PwN-RP-cpY"/>
